Set min width of 800px for the banner image

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
           <table class="no-borders" align="center" style="overflow-wrap: break-word; max-width: 800px; width: 100%; Margin: 5px auto 0px;border-spacing:0 9px;border-collapse: separate;" ref="newsletter">
             <tr v-if="header.style == '1'" style="position:relative;width: 100%; border-radius: 15px; padding: 10px; align-items: center;">
               <td colspan="2" valign="middle">
-                <img :src="header.image" width="100%" style="width:100%">
+                <img :src="header.image" width="100%" style="width:100%;min-width:800px">
               </td>
             </tr>
 
