Move Analytics View help

--- a/index.html
+++ b/index.html
@@ -684,6 +684,14 @@
               </ol>
             </div>
             <div class="card">
+              <h3 class="card-title">How To View Analytics?</h3>
+              <ol>
+                <li>If you don't have access to your Google Analytics, please send our team at SiteForward an email requesting access<br><small>Please include your Google Email in your request</small></li>
+                <li>Open your Google Analytics Dashboard</li>
+                <li>Open your Events Overview tab<br><small>Located under the Behaviour tab</small></li>
+              </ol>
+            </div>
+            <div class="card">
               <h3 class="card-title">How to <strong>Use</strong> the Newsletter</h3>
               <p><strong><small>If you're planning to use the newsletter in MS Word make sure to enable MS Word Support in the Settings tab in the newsletter generator</small></strong></p>
               <ol>
