--- a/index.html
+++ b/index.html
@@ -629,7 +629,7 @@
           <div class="card">
             <h3 class="card-title">Enable MS Word Support</h3>
             <p><small><strong>This can cause issues if enabled and is being used in an email.</strong>
-              <br><br>After pasting the newsletter into MS Word right click on the inserted table, open table properties, go to columns, and unselect <strong>Preffered Width</strong>. Then you can drag the column width manually to fit the image</small></p>
+              <br><br>After pasting the newsletter into MS Word right click on the inserted table, open table properties, go to columns, and unselect <strong>Preferred Width</strong>. Then you can drag the column width manually to fit the image</small></p>
             <div class="form-item">
               <input type="checkbox" v-model="wordSupport" id="enableWordSupport">
               <label for="enableWordSupport">Word Support</label>
